--- a/css/style.css
+++ b/css/style.css
@@ -127,7 +127,7 @@ nav a:hover {
   height: 49px;
 }
 
-/* General Layout mobile adjustments */
+/* mobile adjustments */
 @media screen and ( max-width: 875px ) {
   
   nav {
@@ -185,13 +185,6 @@ nav a:hover {
 /* Homepage mobile adjustments */
 @media screen and ( max-width: 875px ) {
 
-  #home__img_tree {
-    vertical-align: middle;
-    width: 300px;
-    position: unset;
-    margin: 0;
-  }
-
   .home #content {
     width: 100%;
     height: 100%;
@@ -205,39 +198,6 @@ nav a:hover {
     width: 100%;
   }
 
-  .sun {
-    right: 85px;
-    top: 75px;
-    bottom: unset;
-  }
-
-}
-
-@media screen and ( max-height: 450px ) {
-  #home__img_tree {
-    display: none;
-  }
-}
-
-.sun {
-  position: absolute;
-  bottom: 485px;
-  right: 145px;
-  height: 100px;
-  width: 100px;
-  border-radius: 100%;
-  background-color: rgb(231, 191, 13);
-}
-
-.moon {
-  position: absolute;
-  bottom: 398px;
-  right: 36px;
-  height: 80px;
-  width: 80px;
-  border-radius: 100%;
-  background-color: white;
-  transition: all 1s;
 }
 
 .show {
@@ -259,46 +219,6 @@ nav a:hover {
 .about li>a {
   font-size: 0.9em;
 }
-
-#peace-train {
-  width: 500px;
-  height: 150px;
-  margin: 70px 0 50px 0;
-  border: 1px solid black;
-  box-shadow: 5px 5px 0px 0px rgba(0,0,0,0.16);
-  display: flex;
-}
-
-@media screen and ( max-width: 875px ) {
-  #peace-train {
-    display: none;
-  }
-}
-
-#peace-train img {
-  height: 150px;
-  border-left: 1px solid black;
-}
-
-#peace-train audio {
-  position: relative;
-  top: 50%;
-  transform: translateY(-50%);
-  height: 41px;
-  width: 300px;
-  margin: 0 27px;
-}
-
-#peace-train p {
-  position: absolute;
-  padding: 5px 10px;
-  border: 1px solid black;
-  background-color: rgb(255, 255, 255);
-  box-shadow: 3px 3px 0px 0px rgba(0,0,0,0.16);
-  margin-left: 20px;
-  transform: translateY(-32px);
-}
-
 
 /*--------------------------------------------------------------
   Illustrationen
